--- a/Isi.ShoppingApp.Core/Isi.ShoppingApp.Core.csproj
+++ b/Isi.ShoppingApp.Core/Isi.ShoppingApp.Core.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\Isi.Utility\Isi.Utility.csproj" />
+  </ItemGroup>
+
 </Project>
