--- a/Isi.ShoppingApp.Data/Isi.ShoppingApp.Data.csproj
+++ b/Isi.ShoppingApp.Data/Isi.ShoppingApp.Data.csproj
@@ -5,6 +5,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
+    <PackageReference Include="System.Data.SqlClient" Version="4.8.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\Isi.ShoppingApp.Core\Isi.ShoppingApp.Core.csproj" />
   </ItemGroup>
 
