--- a/Test/Test.csproj
+++ b/Test/Test.csproj
@@ -1,16 +1,14 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
+    <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.Data.SqlClient" Version="4.1.0" />
-    <PackageReference Include="System.Configuration.ConfigurationManager" Version="6.0.0" />
-  </ItemGroup>
-
-  <ItemGroup>
     <ProjectReference Include="..\Isi.ShoppingApp.Core\Isi.ShoppingApp.Core.csproj" />
+    <ProjectReference Include="..\Isi.ShoppingApp.Data\Isi.ShoppingApp.Data.csproj" />
+    <ProjectReference Include="..\Isi.ShoppingApp.Domain\Isi.ShoppingApp.Domain.csproj" />
   </ItemGroup>
 
 </Project>
