autenthication, button view history

--- a/Isi.ShoppingApp.Presentation/App.config
+++ b/Isi.ShoppingApp.Presentation/App.config
@@ -6,7 +6,7 @@
 
 		<add name="ShoppingDatabase"
 			 providerName="Microsoft.Data.SqlClient"
-			 connectionString="Data Source=751FJW2\SQLEXPRESS;Initial Catalog=ShoppingDatabase;Integrated Security=True;TrustServerCertificate=True"/>
+			 connectionString="Data Source=18C6KT2\SQLEXPRESS;Initial Catalog=ShoppingDatabase;Integrated Security=True;TrustServerCertificate=True"/>
 	</connectionStrings>
 
 </configuration>
